Fixed some issues with combat ending incorrectly, fixed position of damage and healing numbers to be visible
fixes #179

--- a/fuzzy-octo-tribble/Content/Game.css
+++ b/fuzzy-octo-tribble/Content/Game.css
@@ -184,6 +184,10 @@
         background-color:#C0C0C0;
     }
 
+.damage-display {
+    z-index:3;
+}
+
 @media (max-width: 850px) {
     .text-font {
         font-size: 20px;
